--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <style
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     </body>
 </html>
