--- a/templates/material/index.html.twig
+++ b/templates/material/index.html.twig
@@ -1,20 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MaterialController!{% endblock %}
+{% block title %}Materials{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<table id="material_table" class="display" style="width:100%">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Quantity</th>
+        <th>Price</th>
+        <th>Created At</th>
+        <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+        {% for material in materials %}
+        <tr>
+            <td>{{ material.name }}</td>
+            <td>{{ material.quantity }}</td>
+            <td>{{ material.price }}</td>
+            <td>{{ material.name }}</td>
+            <td>
+                {# TODO : Click to Action : Up / Down Quantity + Edit #}
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/ghoubre/Desktop/Projet/perso/material/src/Controller/MaterialController.php'|file_link(0) }}">src/Controller/MaterialController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/ghoubre/Desktop/Projet/perso/material/templates/material/index.html.twig'|file_link(0) }}">templates/material/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% endblock %}
+
+{% block javascript %}
+$(document).ready(function() {
+    $('#material_table').DataTable();
+} );
+
 {% endblock %}
