--- a/templates/material/edit.html.twig
+++ b/templates/material/edit.html.twig
@@ -3,5 +3,8 @@
 {% block title %}Materials{% endblock %}
 
 {% block body %}
-    {{ form(form) }}
+    {{ form_start (form) }}
+    {{ form_widget (form) }}
+    <button>ok</button>
+    {{ form_end (form) }}
 {% endblock %}
