feature show function

--- a/templates/material/edit.html.twig
+++ b/templates/material/edit.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
     {{ form_start (form) }}
     {{ form_widget (form) }}
-    <button>ok</button>
+    <button type="submit">ok</button>
     {{ form_end (form) }}
 {% endblock %}
